--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <hr class="hr-line" />
                 <div class="text-center">
                     <i class="fa fa-copyright icon" aria-hidden="true"></i>
-                    <span class="vr-footer-section-copyright">2022 Vr. Created By <a href="">Venkat</a></span>
+                    <span class="vr-footer-section-copyright">2022 Vr. Created By <a href="https://www.linkedin.com/in/venkatesan-tech/">Venkat</a></span>
                 </div>
             </div>
         </div>
