--- a/index.html
+++ b/index.html
@@ -2,21 +2,35 @@
 <html>
 
 <head>
+
+    <!--Bootstarp-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    
+    <!--JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    
+    <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/d1c2ea8b80.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="VR-Website.css">
+
+    <!--Icon-->
+    <link rel="icon" sizes="192x192" href="/Assets/vr-logo-img.png">
+
+    <!--External Link-->
+    <link rel="stylesheet" href="./CSS/VR-Website.css">
+
+    <!--Title-->
+    <title>Virtual Reality</title>
 </head>
 
 <body>
-
+    <!--Header Starting-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img style="width : 30px;" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-logo-img.png" />
+                    <img style="width : 30px;" src="./Assets/vr-logo-img.png" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,6 +46,7 @@
             </div>
         </nav>
     </header>
+    <!--Header Ending-->
 
     <!--Hero Section Starting-->
     <section>
@@ -86,7 +101,7 @@
 
                     <div class="col-12 col-md-4 mt-5 mb-5">
                         <div class="text-center">
-                            <img class="img-logo" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/easy-connect-img.png" />
+                            <img class="img-logo" src="./Assets/easy-connect-img.png" />
                             <h1 class="H-tag">Easy to Connect</h1>
                             <p class="Features-p">Praesent sapien massa, convallis a pellentesque amet nisl tempus convallis quis ac lectus.</p>
                         </div>
@@ -94,7 +109,7 @@
 
                     <div class="col-12 col-md-4 mt-5 mb-5">
                         <div class="text-center">
-                            <img class="img-logo" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-capability-img.png" />
+                            <img class="img-logo" src="./Assets/vr-capability-img.png" />
                             <h1 class="H-tag">VR Capability</h1>
                             <p class="Features-p">Praesent sapien massa, convallis a pellentesque amet nisl tempus convallis quis ac lectus.</p>
                         </div>
@@ -102,7 +117,7 @@
 
                     <div class="col-12 mt-5 col-md-4 mb-5">
                         <div class="text-center">
-                            <img class="img-logo" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/video-games-img.png" />
+                            <img class="img-logo" src="./Assets/video-games-img.png" />
                             <h1 class="H-tag">Video games</h1>
                             <p class="Features-p">bxdbab <span class="Text-bold">Quisque </span> Praesent sapien massa, convallis a pellentesque amet .</p>
                         </div>
@@ -110,7 +125,7 @@
 
                     <div class="col-12 col-md-4 mt-5 mb-5">
                         <div class="text-center">
-                            <img class="img-logo" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/interaction-img.png" />
+                            <img class="img-logo" src="./Assets/interaction-img.png" />
                             <h1 class="H-tag">Interaction</h1>
                             <p class="Features-p">Praesent sapien massa, convallis a pellentesque amet nisl tempus convallis quis ac lectus.</p>
                         </div>
@@ -118,7 +133,7 @@
 
                     <div class="col-12 col-md-4 mt-5 mb-5">
                         <div class="text-center">
-                            <img class="img-logo" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/easy-play-img.png" />
+                            <img class="img-logo" src="./Assets/easy-play-img.png" />
                             <h1 class="H-tag">Easy to Connect</h1>
                             <p>Praesent sapien massa, convallis a pellentesque amet nisl tempus convallis quis ac lectus.</p>
                         </div>
@@ -126,7 +141,7 @@
 
                     <div class="col-12 col-md-4 mt-5 mb-5">
                         <div class="text-center">
-                            <img class="img-logo" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/easy-play-img.png" />
+                            <img class="img-logo" src="./Assets/easy-play-img.png" />
                             <h1 class="H-tag">Easy to play</h1>
                             <p class="Features-p">Praesent sapien massa, convallis a pellentesque amet nisl tempus convallis quis ac lectus.</p>
                         </div>
@@ -148,21 +163,21 @@
 
                     <div class="col-12 col-md-4">
                         <div class="text-center">
-                            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-kit-1-img.png" class="Box-1" />
+                            <img src="./Assets/vr-kit-1-img.png" class="Box-1" />
                             <p class="tool-kit-p">Two Touch Controllers</p>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-4">
                         <div class="text-center">
-                            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-kit-2-img.png" class="Box-1" />
+                            <img src="./Assets/vr-kit-2-img.png" class="Box-1" />
                             <p class="tool-kit-p">VR Headset</p>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-4">
                         <div class="text-center">
-                            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-kit-3-img.png" class="Box-1" />
+                            <img src="./Assets/vr-kit-3-img.png" class="Box-1" />
                             <p class="tool-kit-p">Charging Cable</p>
                         </div>
                     </div>
@@ -178,7 +193,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 order-1 order-md-2">
-                        <img class="img-box" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-optics-img.png" />
+                        <img class="img-box" src="./Assets/vr-optics-img.png" />
                     </div>
                     <div class="col-12 col-md-6 order-2 order-md-1 mt-5">
                         <h2 class="h-tag">Improved Optics</h2>
@@ -186,7 +201,7 @@
                         <button class="Btn-B">Read More</button>
                     </div>
                     <div class="col-12 col-md-6 order-3 order-md-3">
-                        <img class="img-box" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-controllers-img.png" />
+                        <img class="img-box" src="./Assets/vr-controllers-img.png" />
                     </div>
                     <div class="col-12 col-md-6 order-4 order-md-4 mt-5">
                         <h2 class="h-tag">Improved Optics</h2>
@@ -210,7 +225,7 @@
                         </div>
 
                         <div>
-                            <img class="img-bg d-md-none" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-set-img.png" />
+                            <img class="img-bg d-md-none" src="./Assets/vr-set-img.png" />
                         </div>
 
                         <div>
@@ -219,7 +234,7 @@
                     </div>
 
                     <div class="col-md-6 d-none d-md-block mt-5 order-md-1">
-                        <img class="img-bg " src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-set-img.png" />
+                        <img class="img-bg " src="./Assets/vr-set-img.png" />
                     </div>
                 </div>
             </div>
@@ -238,12 +253,12 @@
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="Card-1 shadow mt-3">
-                            <img class="ig-box" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-trending-blogs-1-img.png" />
+                            <img class="ig-box" src="./Assets/vr-trending-blogs-1-img.png" />
                             <div class="pb-3">
                                 <p class="p-cc pt-3  ml-3">Amazon</p>
                                 <p class="pp-c2 ml-3 mr-3">Vivamus suscipit tortor eget felis porttitor volutpat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
                                 <a class="dd ml-3" href=""> READ MORE
-                                    <svg width="16px" height="16px" viewBox="0 0 16 16" class="bi bi-arrow-right mb-1" fill="#1754a1" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="16px" height="16px" viewbox="0 0 16 16" class="bi bi-arrow-right mb-1" fill="#1754a1" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
                                     </svg>
                                 </a>
@@ -255,12 +270,12 @@
 
                     <div class="col-12 col-md-6">
                         <div class="Card-1 shadow mt-5">
-                            <img class="ig-box" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-trending-blogs-1-img.png" />
+                            <img class="ig-box" src="./Assets/vr-trending-blogs-1-img.png" />
                             <div class="pb-3">
                                 <p class="p-cc pt-3  ml-3">Amazon</p>
                                 <p class="pp-c2 ml-3 mr-3">Vivamus suscipit tortor eget felis porttitor volutpat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
                                 <a class="dd ml-3 mb-5" href=""> READ MORE
-                                    <svg width="16px" height="16px" viewBox="0 0 16 16" class="bi bi-arrow-right mb-1" fill="#1754a1" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="16px" height="16px" viewbox="0 0 16 16" class="bi bi-arrow-right mb-1" fill="#1754a1" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
                                     </svg>
                                 </a>
@@ -287,7 +302,7 @@
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <div class="text-center text-md-left">
-                            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-logo-img.png" class="vr-logo" />
+                            <img src="./Assets/vr-logo-img.png" class="vr-logo" />
                             <div class="d-flex flex-row justify-content-center justify-content-md-start mt-3 mb-3">
                                 <div class="vr-footer-section-icon-container">
                                     <i class="fab fa-google icon"></i>
